** More tests ** Bug fixes

--- a/src/tests/TestCommon.fpcunit.ini
+++ b/src/tests/TestCommon.fpcunit.ini
@@ -9,5 +9,15 @@ All Tests.Checked=1
 All Tests.Expanded=1
 TTestSecurityManagerSchema.Checked=1
 TTestSecurityManagerSchema.Expanded=1
-TTestSecurityManagerSchema.TstCRTAuthorization.Checked=1
-TTestSecurityManagerSchema.TstCRTAuthorization.Expanded=0
+TTestSecurityManagerSchema.CR_TAuthorization.Checked=1
+TTestSecurityManagerSchema.CR_TAuthorization.Expanded=0
+TTestSecurityManagerSchema.CHK_SchemaType.Checked=1
+TTestSecurityManagerSchema.CHK_SchemaType.Expanded=0
+TTestSecurityManagerSchema.CR_SchemaLevel.Checked=1
+TTestSecurityManagerSchema.CR_SchemaLevel.Expanded=0
+TTestSecurityManagerSchema.CR_SchemaLevelUser.Checked=1
+TTestSecurityManagerSchema.CR_SchemaLevelUser.Expanded=0
+TTestSecurityManagerSchema.CR_SchemaUserAuth.Checked=1
+TTestSecurityManagerSchema.CR_SchemaUserAuth.Expanded=0
+TTestSecurityManagerSchema.CR_SchemaUserAuthUser.Checked=1
+TTestSecurityManagerSchema.CR_SchemaUserAuthUser.Expanded=0
